* Fri Jan 25 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- pki_cert_sync type now generates an aggregate CA certificates
  with X.509 certificate headers removed, cacerts_no_headers.pem,
  in addition to the existing aggregate CA certificates file,
  cacerts.pem. This new CA certificates file is useful for
  application that cannot handle certificate headers.
- Add a pki_cert_sync option, ``generate_pem_hash_links``, which controls
  whether pki_cert_sync should generate and maintain the PEM file hash
  links in the target directory. Disabling automatic PEM hash link
  generation is useful if an application is managing those links
  in the target directory, itself.
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.4-0
- Drop Hiera 4 support
- Update badges and contribution guide URL in README.md

* Wed Jul 18 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.4-0
- Add support for OEL and Puppet 5

* Mon Apr 16 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.0.3-0
- pki::copy's source parameter now accepts any string to allow for use of NSS
  and remote file sources.
- Cleanup unneeded fixtures
- Update version range of auditd dependency in metadata.json

* Mon Dec 11 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.2-0
- Ensure that /etc/pki/simp_apps is recursively purged so that old certificates
  are not left on the system
- Adds a new param, `$certname`, that controls the name of the certs in keydist
  that will be copied over. This used to be set to `$facts['fqdn']` without an
  option to change it, now it will default to `$trusted['certname']`

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
- Update puppet dependency and remove OBE pe dependency in metadata.json

* Wed Jan 11 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- SIMP certs are now managed in /etc/pki/simp/x509, and application