@@ -7,6 +7,11 @@ Puppet::Type.type(:pki_cert_sync).provide(:redhat) do
     # of the provider.  Will be called a second time after the sync
     # operation, if the target dir was not initially in sync.
     @num_insync_calls = 0
+
+    # Hash of Tempfile objects for cacert files
+    # Key is name of cacert file in the target_dir
+    # Value is Tempfile object
+    @ref_tempfiles = {}
   end
 
   # Sets internal and external state information derived from the contents
@@ -17,14 +22,14 @@ Puppet::Type.type(:pki_cert_sync).provide(:redhat) do
   # - Internal state is stored in @to_link and @directories
   #   - @to_link is the Hash returned by this method (see below)
   #   - @directories is a list of subdirectories found in the source directory
-  # - External state is stored in .cacerts.pem and .cacerts_no_headers.pem
-  #   files in the target directory.
+  # - External state is stored in temporary cacerts.pem and cacerts_no_headers.pem
+  #   files
   #   - These are reference files for the aggregate files generated by this
   #     provider's source=() method.
   #   - Each file contains the aggregate of CA certificates found in the
   #     source directory
-  #   - .cacerts.pem is the aggregate of the raw PEM file content
-  #   - .cacerts_no_headers.pem is a copy of cacerts.pem for which any X.509
+  #   - cacerts.pem is the aggregate of the raw PEM file content
+  #   - cacerts_no_headers.pem is a copy of cacerts.pem for which any X.509
   #     certificate headers have been removed.
   #
   # Returned object is a hash of PEM file info
@@ -57,7 +62,7 @@ Puppet::Type.type(:pki_cert_sync).provide(:redhat) do
       # Generate {PEM file, hash link} pairs and the reference cacerts files.
       # Each pair will be {PEM file, PEM file}, instead, when PEM hash link
       # generation is disabled.
-      @to_link = generate_pem_info(target_dir, to_parse, @resource.generate_pem_hash_links?)
+      @to_link = generate_pem_info(to_parse, @resource.generate_pem_hash_links?)
     end
 
     unless @to_link.empty?
@@ -150,9 +155,9 @@ Puppet::Type.type(:pki_cert_sync).provide(:redhat) do
 
       if insync or @num_insync_calls == 2
         # Done with the transient reference files, so remove them.
-        # They can cause problems for some applications.
-        FileUtils.rm_f(ref_file(cacerts_file))
-        FileUtils.rm_f(ref_file(stripped_cacerts_file))
+        ref_file_obj(cacerts_file).unlink
+        ref_file_obj(stripped_cacerts_file).unlink
+        @ref_tempfiles.clear
       end
     end
 
@@ -241,10 +246,29 @@ Puppet::Type.type(:pki_cert_sync).provide(:redhat) do
     /^cacerts(_no_headers)?.pem$/
   end
 
-  def ref_file(cacerts_filename)
-    ".#{cacerts_filename}"
+  # Returns a file object of the reference file for the
+  # specified cacerts file
+  def ref_file_obj(cacerts_filename)
+    unless @ref_tempfiles.has_key?(cacerts_filename)
+      require 'tempfile'
+      tempfile = Tempfile.new(File.basename(cacerts_filename))
+      @ref_tempfiles[cacerts_filename] = tempfile
+    end
+
+    @ref_tempfiles[cacerts_filename]
   end
 
+  # Returns a file path of the reference file for the
+  # specified cacerts file
+  def ref_file(cacerts_filename)
+    unless @ref_tempfiles.has_key?(cacerts_filename)
+      require 'tempfile'
+      tempfile = Tempfile.new(File.basename(cacerts_filename))
+      @ref_tempfiles[cacerts_filename] = tempfile
+    end
+
+    @ref_tempfiles[cacerts_filename].path
+  end
 
   # Helper Methods
 
@@ -299,26 +323,23 @@ Puppet::Type.type(:pki_cert_sync).provide(:redhat) do
 
   # Returns a hash of PEM files and their corresponding links for each
   # valid PEM file listed in to_parse. Also generates reference cacerts
-  # files (one with and one without x509 certificate headers) in target_dir.
+  # files (one with and one without x509 certificate headers).
   #
   # - Skips any file that does not contain a x509 certificate
   # - **Only** processes the first x509 certificate in a file
   #
-  # target_dir = directory in which the reference files are to be written
-  # to_parse   = list of files to be processed; path is relative to
-  #              the current working directory
+  # to_parse = list of files to be processed; path is relative to
+  #            the current working directory
   #
   # generate_hash_links = whether to generate PEM hash links;
   #              When false, the link is set to the original PEM file name.
   #              This signifies to subsequent processing that the link is
   #              not to be generated.
-  def generate_pem_info(target_dir, to_parse, generate_hash_links)
+  def generate_pem_info(to_parse, generate_hash_links)
     ref_cacerts = nil
     ref_stripped_cacerts = nil
-    File.directory?(target_dir) or Dir.mkdir(target_dir, 0755)
-    ref_cacerts = File.open(File.join(target_dir, ref_file(cacerts_file)), 'w', 0644)
-    ref_stripped_cacerts = File.open(
-      File.join(target_dir, ref_file(stripped_cacerts_file)), 'w', 0644)
+    ref_cacerts = ref_file_obj(cacerts_file)
+    ref_stripped_cacerts = ref_file_obj(stripped_cacerts_file)
 
     hash_targets = {}
     to_link = {}
@@ -452,18 +473,17 @@ Puppet::Type.type(:pki_cert_sync).provide(:redhat) do
     if File.exist?(ref)
       if File.exist?(file)
         selinux_context = resource.get_selinux_current_context("#{target_dir}/#{file}")
-      else
-        # The reference file was created using the default selinux context
-        # for the target directory. We're going to assume that is appropriate.
-        selinux_context = resource.get_selinux_current_context("#{target_dir}/#{ref}")
       end
 
-      selinux_context.nil? and
-        Puppet.debug("Could not get selinux context for '#{target_dir}/#{file}'")
+      FileUtils.cp(ref, file)
+      FileUtils.chmod(0644, file)
 
-      FileUtils.cp(ref, file, {:preserve => true})
-      resource.set_selinux_context("#{target_dir}/#{file}", selinux_context).nil? and
-        Puppet.debug("Could not set selinux context on '#{file}'")
+      if selinux_context.nil?
+        Puppet.debug("Could not get selinux context for '#{target_dir}/#{file}'")
+      else
+        resource.set_selinux_context("#{target_dir}/#{file}", selinux_context).nil? and
+          Puppet.debug("Could not set selinux context on '#{file}'")
+      end
     else
       Puppet.warning("Skipping sync of #{target_dir}/#{file}: Source no longer exists")
     end
